1.6/_sources/modules/generated/sklearn.decomposition.FactorAnalysis.rst.txt
FactorAnalysis
==============

.. currentmodule:: sklearn.decomposition

.. autoclass:: FactorAnalysis
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.decomposition.FactorAnalysis sklearn.decomposition.FactorAnalysis.__init__ sklearn.decomposition.FactorAnalysis.fit sklearn.decomposition.FactorAnalysis.fit_transform sklearn.decomposition.FactorAnalysis.get_covariance sklearn.decomposition.FactorAnalysis.get_feature_names_out sklearn.decomposition.FactorAnalysis.get_metadata_routing sklearn.decomposition.FactorAnalysis.get_params sklearn.decomposition.FactorAnalysis.get_precision sklearn.decomposition.FactorAnalysis.score sklearn.decomposition.FactorAnalysis.score_samples sklearn.decomposition.FactorAnalysis.set_output sklearn.decomposition.FactorAnalysis.set_params sklearn.decomposition.FactorAnalysis.transform 
   :add-heading: Gallery examples
   :heading-level: -