1.7/_sources/modules/generated/sklearn.decomposition.FactorAnalysis.rst.txt
FactorAnalysis
==============

.. currentmodule:: sklearn.decomposition

.. autoclass:: FactorAnalysis
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.decomposition.FactorAnalysis sklearn.decomposition.FactorAnalysis.__delattr__ sklearn.decomposition.FactorAnalysis.__dir__ sklearn.decomposition.FactorAnalysis.__eq__ sklearn.decomposition.FactorAnalysis.__format__ sklearn.decomposition.FactorAnalysis.__ge__ sklearn.decomposition.FactorAnalysis.__getattribute__ sklearn.decomposition.FactorAnalysis.__getstate__ sklearn.decomposition.FactorAnalysis.__gt__ sklearn.decomposition.FactorAnalysis.__hash__ sklearn.decomposition.FactorAnalysis.__init__ sklearn.decomposition.FactorAnalysis.__init_subclass__ sklearn.decomposition.FactorAnalysis.__le__ sklearn.decomposition.FactorAnalysis.__lt__ sklearn.decomposition.FactorAnalysis.__ne__ sklearn.decomposition.FactorAnalysis.__new__ sklearn.decomposition.FactorAnalysis.__reduce__ sklearn.decomposition.FactorAnalysis.__reduce_ex__ sklearn.decomposition.FactorAnalysis.__repr__ sklearn.decomposition.FactorAnalysis.__setattr__ sklearn.decomposition.FactorAnalysis.__setstate__ sklearn.decomposition.FactorAnalysis.__sizeof__ sklearn.decomposition.FactorAnalysis.__sklearn_clone__ sklearn.decomposition.FactorAnalysis.__sklearn_tags__ sklearn.decomposition.FactorAnalysis.__str__ sklearn.decomposition.FactorAnalysis.__subclasshook__ sklearn.decomposition.FactorAnalysis._build_request_for_signature sklearn.decomposition.FactorAnalysis._get_default_requests sklearn.decomposition.FactorAnalysis._get_doc_link sklearn.decomposition.FactorAnalysis._get_metadata_request sklearn.decomposition.FactorAnalysis._get_param_names sklearn.decomposition.FactorAnalysis._get_params_html sklearn.decomposition.FactorAnalysis._html_repr sklearn.decomposition.FactorAnalysis._repr_html_inner sklearn.decomposition.FactorAnalysis._repr_mimebundle_ sklearn.decomposition.FactorAnalysis._rotate sklearn.decomposition.FactorAnalysis._validate_params sklearn.decomposition.FactorAnalysis.fit sklearn.decomposition.FactorAnalysis.fit_transform sklearn.decomposition.FactorAnalysis.get_covariance sklearn.decomposition.FactorAnalysis.get_feature_names_out sklearn.decomposition.FactorAnalysis.get_metadata_routing sklearn.decomposition.FactorAnalysis.get_params sklearn.decomposition.FactorAnalysis.get_precision sklearn.decomposition.FactorAnalysis.score sklearn.decomposition.FactorAnalysis.score_samples sklearn.decomposition.FactorAnalysis.set_output sklearn.decomposition.FactorAnalysis.set_params sklearn.decomposition.FactorAnalysis.transform 
   :add-heading: Gallery examples
   :heading-level: -